some small changes in templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="row">
             <div class=" col-md-8 col-md-10 mx-auto">
-                <div class="site-heading">
+                <div class="site-heading" style="text-align: center;">
                     <h3 class=" site-heading my-4 mt-3 text-white">اولین سامانه نیکوکاری جمعی در زمینه آموزش</h3>
                     <p class="text-light">
                         در کنار هم بدون شو آف سعی میکنیم اندازه خودمون ایران رو جای بهتری کنیم 😘
@@ -39,9 +39,15 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <h2 class="card-title">{{ post.title }}</h2>
-                    <p class="card-text text-muted h6">{{ post.author }} | {{ post.created_on}} </p>
+                    <p class="card-text text-muted h6">پست شده در: {{ post.created_on}}</p>
+                    <p class="card-text text-muted h6">
+                        وضعیت:
+                        {% if post.status == 1 %}
+                        تکمیل تامین مالی، تحویل داده شده
+                        {% endif %}
+                    </p>
                     <p class="card-text">{{post.content|slice:":200" }}</p>
-                    <a href="{% url 'post_detail' post.slug  %}" class="btn btn-primary">Read More &rarr;</a>
+                    <a href="{% url 'post_detail' post.slug  %}" class="btn btn-primary">&rarr; بیشتر</a>
                 </div>
             </div>
             {% endfor %}
