--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,22 +1,26 @@
 {% block sidebar %}
 
 <style>
-        .card{
-            box-shadow: 0 16px 48px #E3E7EB;
-        }
-       
+    .card {
+        box-shadow: 0 16px 48px #E3E7EB;
+    }
 </style>
 
 <!-- Sidebar Widgets Column -->
 <div class="col-md-4 float-right ">
-<div class="card my-4">
-        <h5 class="card-header">About Us</h5>
-    <div class="card-body">
-        <p class="card-text"> This awesome blog is made on the top of our Favourite full stack Framework 'Django', follow up the tutorial to learn how we made it..!</p>
-        <a href="https://djangocentral.com/building-a-blog-application-with-django"
-           class="btn btn-danger">Know more!</a>
+    <div class="card my-4">
+        <h5 class="card-header">خونه مهربونی چیکار میکنه؟</h5>
+        <div class="card-body">
+            <p class="card-text" style="text-align: justify;">
+                مختصر و مفید بخوایم بگیم، در کنار هم تلاش میکنیم تا دانش آموزان و دانشجویان بی بضاعت فرصت رشد و پیشرفت
+                رو فقط به خاطر فقر مالی از دست ندهند.
+                تمامی مطالبی که در اینجا پست میشه صحت موضوعش توسط مدیر سایت بررسی میشه و میتونید با خیال راحت در راه
+                نیکوکاری قدم بردارید.
+                <br />
+                ممنون از دل بزرگ و انسانیت شما عزیزان🥰
+            </p>
+        </div>
     </div>
-</div>
 </div>
 
 {% endblock sidebar %}
