--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
     {% endblock content %}
     <!-- Footer -->
     <footer class="py-3 bg-grey">
-        <p class="m-0 text-dark text-center ">Copyright &copy; Django Central</p>
+        <p class="m-0 text-dark text-center ">Copyright &copy; Khooneye Mehrabooni</p>
     </footer>
 </body>
 
