home page title changed

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="fa" dir="rtl">
 
 <head>
-    <title>خونه مهربونی | وبلاگ</title>
+    <title>خونه مهربونی | نیکوکاری جمعی در زمینه آموزش</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
     <!-- Required meta tags -->
     <meta charset="utf-8">
