--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         <div class="row">
             <div class=" col-md-8 col-md-10 mx-auto">
                 <div class="site-heading" style="text-align: center;">
-                    <h3 class=" site-heading my-4 mt-3 text-white">اولین سامانه نیکوکاری جمعی در زمینه آموزش</h3>
+                    <h3 class=" site-heading my-4 mt-3 text-white">نیکوکاری جمعی در زمینه آموزش</h3>
                     <p class="text-light">
                         در کنار هم بدون شو آف سعی میکنیم اندازه خودمون ایران رو جای بهتری کنیم 😘
                     </p>
